src/main/java/com/test/coursemanagementspring/core/errors/NotFoundException.java
package com.test.coursemanagementspring.core.errors;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }
}
